# CharmsLink

./: Tools.html  index.html  script.js  styles.css
Charms Web Tools/: Charms Web Tools.html  text_replacer.html
Charms Web Tools/Image Tools/3D Text/: deep-research-report MODEL RAYTRACING.md
Charms Web Tools/Image Tools/3D Text/Codex/: README.md  package.json
Charms Web Tools/Image Tools/Background Remover/Background Remover/: inject_brush_1.py  inject_brush_2.py
Charms Web Tools/Image Tools/Model PathTracer/: deep-research-report MODEL RAYTRACING.md  index.html  main.js  styles.css
Charms Web Tools/Image Tools/Model PathTracer/app/: bvh.js  export.js  loaders.js  materials.js  renderer.js  ui.js
Charms Web Tools/Image Tools/Noise Studio/: Modular Noise Studio Guide.txt
Charms Web Tools/Image Tools/Noise Studio/Modular Studio V2/: .gitignore  Documenting Modular Studio Architecture.md  Neumorphism UI Plan.txt  WASM-PERFORMANCE-REVIEW.md  WEB WORKERS REVIEW.md  ai_context.txt  app.js  console logs.txt  dng to png reseach.md  electron-main.js  index.html  library.html  package.json  parse_layers.js  preload.js  render_engine_research_pt_bdpt_mlt.txt  stitch_improvement_research.md  style.css  style_context.txt  tmp_dngDecode_probe.mjs  tmp_index_check.mjs  tmp_workspaces_check.mjs  ui-generator.js
Charms Web Tools/Image Tools/Noise Studio/Modular Studio V2/Stack/: AI_CONTEXT.md  CMakeLists.txt  DEV_LOG.md  README.md
Charms Web Tools/Image Tools/Noise Studio/Modular Studio V2/Stack/src/App/: AppShell.cpp  AppShell.h
Charms Web Tools/Image Tools/Noise Studio/Modular Studio V2/Stack/src/Editor/: EditorModule.cpp  EditorModule.h
Charms Web Tools/Image Tools/Noise Studio/Modular Studio V2/Stack/src/Editor/Layers/: BlurLayer.cpp  LayerBase.h  NoiseLayer.cpp  VignetteLayer.cpp
Charms Web Tools/Image Tools/Noise Studio/Modular Studio V2/Stack/src/Editor/UI/: EditorSidebar.cpp
Charms Web Tools/Image Tools/Noise Studio/Modular Studio V2/Stack/src/Editor/UI/Tabs/: CanvasTab.cpp  LayersTab.cpp
Charms Web Tools/Image Tools/Noise Studio/Modular Studio V2/Stack/src/Renderer/: GLHelpers.cpp  GLHelpers.h  GLLoader.cpp  GLLoader.h  RenderPipeline.cpp  RenderPipeline.h
Charms Web Tools/Site Bundler/Bundler dev/GLM Brutalist Dev for v5/: v8 - Save Before Codex.html
Charms Web Tools/Site Bundler/Current Bundler/: bundler site.txt  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  v9.css  v9.html  v9.js  vite.config.ts
Image Tools Landing/Current/: index unbundled.html  index.html
Image Tools Landing/Dev/: cloud_landing.html  links.txt
OLD SITE BEFORE BRUTALISM/js/: parallax.js  scroll.js  section3.js  social-scroll.js
(+506 files in other folders)
